**************************************************************
** MovieJukebox Release note
***************************************************************

MovieJukebox 1.0.15 beta
------------------------
  - Enhancement  #225 Improved sorting of movies (by IMdB rating and by year)
  - Enhancement  #250 So how do we customize the categories?
  - Enhancement  #254 Use XBMC tvshow nfo layout to override scraper info
  - Enhancement  #281 Support DVD order from TheTVDB.com
  - Enhancement  #331 FilmUp.it scraper (Italian Plug-In)
  - Enhancement  #343 Allowing prebuf to be set
  - Fixed defect #346 Errors on multiple part movies - empty details html file
  - Enhancement  #348 Enhanced BD-50 Disk RIP Scanner
  - Fixed defect #352 Fanart not being resized
  - Fixed defect #353 Some of the html files are not getting copied from the temp dir to the jukebox dir
  - Fixed defect #354 Jukebox clean-up doesn't handle files with no extension cleanly
  - Fixed defect #356 ForceFanartOverwrite setting doesn't work
  - Fixed defect #359 Allow either Series url or Season url in NFO for TheTVDB
  - Fixed defect #361 TV Shows with new episodes do not show in the YAMJ "new" html output
  - Fixed defect #362 Genres.xml has un-necessary entries
  - Enhancement  #363 Subtitle download as part of movie information collection
                      NOTE: YAMJ needs write access to the video directory for this enhancement to work
  - Enhancement  #365 Updated Stratim plugin:
                        1) Support for NFO with sratim.co.il URL in it
                        2) High resolution Hebrew posters form sub-baba.com
                        3) Complete missing data with data from IMDB or TVDB
  - Fixed defect #366 When the NFO changes force download/update of content
  - Fixed defect #370 Add missing prebuf lines to BD-50 Disk RIP Scanner
  - Fixed defect #372 Scanner does not recognise changed local poster file